fix: tests didn't compile because of anonymous class usage, replaced with mockito spies now.